<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/op1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/recomendacion" />
    <item
        android:id="@+id/op2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/agregar_a_inventario" />
    <item
        android:id="@+id/op3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/inventario" />
    <item
        android:id="@+id/op4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/informacion_semilla" />
    <item
        android:id="@+id/op5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/foot_square_garden" />
    <item
        android:id="@+id/op6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/recordatorio" />
    <item
        android:id="@+id/op7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/logout" />
</menu>