<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmento1">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/recordatorio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/allerta"
            android:text="@string/recordatorio"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/diasdeanticipacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/allerta"
            android:text="Dias de anticipación"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/dias"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="28dp" />

        <TextView
            android:id="@+id/mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/allerta"
            android:text="Mes"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/meses"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_marginBottom="28dp" />

        <Button
            android:id="@+id/btcancelar"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/allerta"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btguardar"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/allerta"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</FrameLayout>